src/app/pages/room/room-page.css
:host {
  display: block;
  height: 100dvh;
  min-height: 100dvh;
}

main {
  margin: 0 auto;
  padding-top: 70px;
  max-width: 900px;
}

.user-list {
  display: flex;
  justify-content: center;
  gap: 20px;
  flex-wrap: wrap;
}

.card-list {
  display: flex;
  gap: 10px;
  flex-wrap: wrap;
  justify-content: center;
}

.result-list {
  display: flex;
  gap: 10px;
  justify-content: center;

  .result {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 5px;
    user-select: none;

    .result-label {
      font-size: 26px;
      line-height: 27px;
    }

    .small-card {
      width: 30px;
      height: 40px;
      display: inline-flex;
      outline: 1px solid;
      align-items: center;
      justify-content: center;
      border-radius: 4px;
      font-size: 14px;
      background: #f4f7f8;
    }
  }
}

section {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 30px;
  margin-bottom: 30px;
  padding: 5px;

  .section-title {
    width: 100%;
    text-align: center;
    padding-bottom: 5px;

    h2 {
      padding: 0 10px;
      display: inline-flex;
      align-items: center;

      &::before,
      &::after {
        display: inline-block;
        content: '';
        width: 100px;
        border-bottom: 1px solid #828d9b87;
        margin: 0 10px;
      }
    }
  }
}

.join-room {
  display: flex;
  justify-content: center;
  padding: 5px;
  flex-direction: column;
  align-items: center;

  input,
  button {
    font-size: 24px;
    padding: 5px;
  }

  span {
    color: rgb(200, 0, 0);
  }
}

.btn {
  padding: 10px;
}

.input-btn {
  display: flex;
  padding: 5px;
}

.spinner-container {
  display: flex;
  justify-content: center;
  height: 600px;
  align-items: center;
}

.participants {
  .title {
    display: inline-flex;
    align-items: center;
    gap: 5px;

    button {
      color: #e90e0e;
    }
  }
}

@media (max-width: 425px) {
  .join-room {
    flex-direction: column;
  }
  .input-btn {
    flex-direction: column;
  }
}

